--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -525,104 +525,91 @@
     <!--end sidebar -->
 
     <!-- Breadcrumb Area -->
-    <section class="breadcrumb-areav2" data-background="images/banner/8.jpg">
-        <div class="container">
-            <div class="row">
+    <section class="breadcrumb-areav2 mobile-app-page">
+		<div class="container">
+			<div class="row justify-content-center">
                 <div class="col-sm-12 col-md-7 my-auto">
-                    <div class="bread-titlev2 app">
-                        <h1 class="wow fadeInUp" data-wow-delay=".2s">Award-Winning Mobile App Development Company</h1>
-                        <p class="mt20 wow fadeInUp" data-wow-delay=".4s">Make your business accessible to everyone with
-                            a stellar mobile application and enrich your consumer base to maximize your ROI.</p>
-                        <a href="#" class="btn-main bg-btn2 lnk mt20 wow zoomInDown" data-wow-delay=".6s">Get Quote
-                            <i class="fas fa-chevron-right fa-icon"></i>
-                            <span class="circle"></span>
-                        </a>
+                    <div class="bread-titlev2">
+                        <span class="text-white">Development</span>
+						<h1 class="wow fadeInUp banner-heading pt-3 text-white" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">Award Wining Mobile App Development Company</h1>
+						<p class="mt20 wow fadeInUp text-white" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Be the top trend among the gamers and streamers with an ultimate game developed by our most reliable game developers.</p>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-5">
-                    <div class="card">
+				<div class="col-sm-12 col-md-5 quote-form">
+					<div class="card form-card">
                         <div class="card-body">
-                            <h3 class="text-center pb-3">Request For Quote</h3>
+                            <h3 class="text-center pb-3 text-white">Request For Quote</h3>
                             <div class="form-block">
-                                <form action="https://digitroopers.com/leads" method="post" id="contactForm"
-                                    data-toggle="validator" class="shake">
-                                    <input type="hidden" name="_token" value="YNPvwqLO8u1GPub821jOd4C3F8gFvi9bgoV6CPuC">
-                                    <div class="row">
+                                <form action="http://www.digitroopers.com/leads" method="post" id="contactForm" data-toggle="validator" class="shake">
+                                    <input type="hidden" name="_token" value="ElTLHeLEbam0aH5dkkqFVTzotbZm4jz5l9koTgJo">
+									<div class="row">
                                         <div class="form-group col-sm-12 col-md-12">
-                                            <input type="text" name="name" id="name" placeholder="Enter name"
-                                                required="" data-error="Please fill Out">
+                                            <input type="text" name="name" id="name" placeholder="Enter name" required="" data-error="Please fill Out">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-sm-12 col-md-12">
-                                            <input type="email" name="email" id="email" placeholder="Enter email"
-                                                required="">
+                                            <input type="email" name="email" id="email" placeholder="Enter email" required="">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-sm-12 col-md-12 col-lg-12">
-                                            <input type="text" name="mobile" id="mobile" placeholder="Enter mobile"
-                                                required="" data-error="Please fill Out">
+                                            <input type="text" name="mobile" id="mobile" placeholder="Enter mobile" required="" data-error="Please fill Out">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row" hidden="">
                                         <input type="hidden" name="service" value="designing">
-                                        <div class="form-group col-sm-12 col-md-12 col-lg-12">
-                                            <select name="service" id="Dtype" required>
-                                                <option value="">Select Service</option>
-                                                <option value="designing">Designing</option>
-                                                <option value="development">Development</option>
-                                                <option value="social-media">Social Media</option>
-                                                <option value="seo">SEO</option>
-                                                <option value="email-marketing">Email Marketing</option>
-                                                <option value="paind-marketing">Paid Marketing</option>
-                                                <option value="ecommerce-managment">E-Commerce Management</option>
-                                            </select>
-                                            <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="form-group form-group col-sm-12 col-md-12">
-                                            <input type="text" id="subject" name="subject" placeholder="Enter subject"
-                                                required="" data-error="Please fill Out">
-                                            <div class="help-block with-errors"></div>
-                                        </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-sm-12">
-                                            <textarea id="message" rows="3" name="message"
-                                                placeholder="Enter your message" required=""></textarea>
+                                            <textarea id="message" rows="3" name="message" placeholder="Enter your message" required=""></textarea>
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
-                                    <button type="submit" name="submit" id="form-submit"
-                                        class="btn-main bg-btn lnk">Submit <i
-                                            class="fas fa-chevron-right fa-icon"></i></button>
+                                    <button type="submit" name="submit" id="form-submit" class="btn-main bg-btn lnk d-block mx-auto">Submit <i class="fas fa-chevron-right fa-icon"></i></button>
                                     <div id="msgSubmit" class="h3 text-center hidden"></div>
                                     <div class="clearfix"></div>
                                 </form>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
+				</div>
+			</div>
+		</div>
+	</section>
+
+    <!-- Start Nav -->
+    <ul class="nav justify-content-center mobile-app-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Overview</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Approach</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Experties</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Work with Us</a>
+        </li>
+      </ul>
+    <!-- End Nav -->
 
     <!-- Start About -->
     <section class="service py-5 bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-6">
+                <div class="col-lg-4">
                     <h2 class="common-heading">Tap into the world’s largest mobile market</h2>
                     <p>with custom Android app development</p>
                 </div>
-                <div class="col-sm-12 col-md-6 block-1">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-5 block-1">
                     <div class="common-heading text-l pl25">
-                        <p>Android makes up 74% of all mobile apps. Creating a successful Android app can help to tap
+                        <p><strong>Android makes up 74% of all mobile apps.</strong> Creating a successful Android app can help to tap
                             into a huge market, take advantage of more customization opportunities and less restrictive
                             Google Play App Store policies to deliver unique value & great usability.</p>
                     </div>
