--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -1260,16 +1260,16 @@
     <section class="key-highlights py-3 py-md-3 py-lg-5 ">
         <div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-12 wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
+				<div class="col-lg-12 wow fadeInDown">
 					<div class="container">
 						<div class="row">
-							<div class="col-lg-6 wow fadeInLeft" style="margin-top: 30px; visibility: visible; animation-name: fadeInLeft;">
+							<div class="col-lg-6 wow fadeInLeft">
 								<div class="common-heading text-l">
 									<h3 class="key-highlight">Key Highlights</h3>
 									<h5 class="key-numbers">Our work in numbers.</h5>
 								</div>
 							</div>
-							<div class="col-lg-6 wow fadeInRight mt-5" style="visibility: visible; animation-name: fadeInRight;">
+							<div class="col-lg-6 wow fadeInRight my-auto">
 								<p class="key-desc">Build your web presence to thrive just like many others have, &amp; let experienced technicians and digital creators develop functionalities that rivet your target audience.</p>
 							</div>
 						</div>
