home & mobile page updated, game page created

--- a/game-development.html
+++ b/game-development.html
@@ -532,8 +532,8 @@
                 <div class="col-lg-6 v-center">
                     <div class="hero-heading-sec2 niwax" style="transform: translate3d(0px, 20px, 0px);">
                         <p class="wow fadeIn p1" style="visibility: visible; animation-name: fadeIn;">Development</p>
-                        <h3 class="wow fadeIn text-white" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Award-Winning Mobile App Development Company</h3>
-                        <p class="wow fadeIn p2" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">Make your business accessible to everyone with a stellar mobile application and enrich your consumer base to maximize your ROI.</p>
+                        <h3 class="wow fadeIn text-white" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Game Development Company</h3>
+                        <p class="wow fadeIn p2" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">We specialize in creating games that are well-liked by people of different ages. We entertain our audience with fantastic characters and inventive games.</p>
                         <div class="awrd-sec text-w mt40 wow fadeIn" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">
                             <div class="bages-slider owl-carousel mt20 owl-loaded owl-drag">
                                 <div class="item" style="width: 173.333px; margin-right: 20px;">
@@ -612,9 +612,9 @@
 			<div class="row">
 				<div class="col-lg-12 wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
 					<div class="common-heading text-l">
-						<h2 class="common-heading">Custom Mobile App Development Company</h2>
-						<p class="text-center">Dive into the future with Future Reality – A custom mobile app development company with unmatched development services and technologies. Unlike conventional mobile applications developers around the globe, we have set ourselves apart with technology beyond imagination. We develop traditional mobile apps for startups and SMBs. For major enterprises, we have incredible technologies such as; Augmented Reality (AR), Virtual Reality (VR), and Mixed Reality (MR) to empower them.</p>
-						<p class="text-center">Future Reality is on the mission to evolve businesses and organizations, enabling them to streamline their operations and automate workflows. With alluring designs and impeccable coding, we help brands to push the limit and thrive among the best in the world. Leverage our mobile app development services to ignite your overall digital traction and connect with your target audience efficiently.</p>
+						<h2 class="common-heading">Custom Game App Development Services</h2>
+						<p class="text-center">We are a group of extraordinarily creative and active game fans that have joined forces with astute engineers to create amazing games that will provide more entertainment and delight to our gamers. Our company offers a myriad of services, including game design and development, 3D animation and graphic design, video filming and special effects, and video editing.</p>
+						<p class="text-center">We work with both 2D and 3D games and can tailor our services to your specific needs. We strive to provide high-quality game development services on schedule and at reasonable costs.</p>
 					</div>
 				</div>
             </div>
@@ -898,8 +898,8 @@
         <div class="container">
             <div class="row text-center d-flex justify-content-center">
                 <div class="col-sm-12 col-md-10">
-                    <h2 class="common-heading">Our Flawless Mobile App Development Process</h2>
-                    <p>Future Reality offers a smooth and Agile mobile app development process to ease our clients. With effective communication and coordination of the development progress, we ensure the integrity of the application based on the client's needs.</p>
+                    <h2 class="common-heading">Our Game Development Process</h2>
+                    <p>Our game development approach is effective and efficient. We collaborate closely with all of our clients to create a bespoke timetable that fits the demands of your project.</p>
                 </div>
             </div>
 
@@ -909,10 +909,10 @@
                         <div class="card-body">
                             <div class="row">
                                 <p class="number">01</p>
-                                <p class="process-title my-auto">Project Brief Analysis</p>
+                                <p class="process-title my-auto">Project Estimate</p>
                             </div>
                             <div class="row">
-                                <p class="process-description">We study our client, his business, and the competitors effectively to come up with the best mobile app solution based on the target and business analysis. To do so, we offer our clients an open and professional environment.</p>
+                                <p class="process-description">A rough project estimate is the first step in our game development process. Next, the project manager will analyze details regarding the proposed game idea, including the design and feel, desired platform, and planned timeframe, to deliver an acceptable estimate.</p>
                             </div>
                         </div>
                     </div>
@@ -922,10 +922,10 @@
                         <div class="card-body">
                             <div class="row">
                                 <p class="number">02</p>
-                                <p class="process-title my-auto">Design Wireframing and Prototype</p>
+                                <p class="process-title my-auto">Technical Requirement Analysis</p>
                             </div>
                             <div class="row">
-                                <p class="process-description">You must have a design or theme of the app, even if you do not, our app consultation will create an entire image of the app and its user interface with the help of our creative UI/UX designers. Look deeply while we wait for the design approval.</p>
+                                <p class="process-description">We list all of the ideal characteristics that the game must-have. Our expert game designers will collaborate with you to identify your gaming requirements. We coordinate closely to develop concepts for the game mechanics.</p>
                             </div>
                         </div>
                     </div>
@@ -945,8 +945,7 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-2"></div>
+            <div class="row my-md-5">
                 <div class="col-md-4">
                     <div class="card process-card">
                         <div class="card-body">
@@ -973,7 +972,61 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-4">
+                    <div class="card process-card">
+                        <div class="card-body">
+                            <div class="row">
+                                <p class="number">04</p>
+                                <p class="process-title my-auto">App Testing</p>
+                            </div>
+                            <div class="row">
+                                <p class="process-description">The most appealing mobile app can get rejected by the marketplaces. Therefore, we ensure to avoid the cause with our highly experienced quality assurance team capable of testing software manually and automatically.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card process-card">
+                        <div class="card-body">
+                            <div class="row">
+                                <p class="number">04</p>
+                                <p class="process-title my-auto">App Testing</p>
+                            </div>
+                            <div class="row">
+                                <p class="process-description">The most appealing mobile app can get rejected by the marketplaces. Therefore, we ensure to avoid the cause with our highly experienced quality assurance team capable of testing software manually and automatically.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card process-card">
+                        <div class="card-body">
+                            <div class="row">
+                                <p class="number">05</p>
+                                <p class="process-title my-auto">App Deployment</p>
+                            </div>
+                            <div class="row">
+                                <p class="process-description">Once the entire app is approved and tested thoroughly with no errors, it is set to debut on the relevant app store. The work is not done yet, the app needs maintenance and support based on user feedback to preserve the app’s integrity.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card process-card">
+                        <div class="card-body">
+                            <div class="row">
+                                <p class="number">04</p>
+                                <p class="process-title my-auto">App Testing</p>
+                            </div>
+                            <div class="row">
+                                <p class="process-description">The most appealing mobile app can get rejected by the marketplaces. Therefore, we ensure to avoid the cause with our highly experienced quality assurance team capable of testing software manually and automatically.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
