--- a/contact-us.html
+++ b/contact-us.html
@@ -14,8 +14,8 @@
 	<!--plugin-css-->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/plugin.min.css" rel="stylesheet">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+	<link href="css/all.css" rel="stylesheet">
+	<link href="css/fonts.css" rel="stylesheet">
 	<!-- template-style-->
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/responsive.css" rel="stylesheet">
@@ -430,20 +430,36 @@
 				<h4>Get In Touch</h4>
 				<p class="mt10">Please fill out the form below if you have a plan or project in mind that you'd like to share with us.</p>
 				<div class="media mt15">
-					<div class="icondive"><img src="images/icons/call.svg" alt="icon"></div>
-					<div class="media-body getintouchinfo"> <a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span></a> </div>
+					<div class="icondive">
+						<img src="images/icons/call.svg" alt="icon">
+					</div>
+					<div class="media-body getintouchinfo">
+						<a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span></a>
+					</div>
 				</div>
 				<div class="media mt15">
-					<div class="icondive"><img src="images/icons/whatsapp.svg" alt="icon"></div>
-					<div class="media-body getintouchinfo"> <a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span></a> </div>
+					<div class="icondive">
+						<img src="images/icons/whatsapp.svg" alt="icon">
+					</div>
+					<div class="media-body getintouchinfo">
+						<a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span></a>
+					</div>
 				</div>
 				<div class="media mt15">
-					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
-					<div class="media-body getintouchinfo"> <a href="mailto:info@website.com">info@website.com <span>Online Support</span></a> </div>
+					<div class="icondive">
+						<img src="images/icons/mail.svg" alt="icon">
+					</div>
+					<div class="media-body getintouchinfo">
+						<a href="mailto:info@website.com">info@website.com <span>Online Support</span></a>
+					</div>
 				</div>
 				<div class="media mt15">
-					<div class="icondive"><img src="images/icons/map.svg" alt="icon"></div>
-					<div class="media-body getintouchinfo"> <a href="mailto:info@website.com">Jaipur, Rajasthan, India<span>Visit Our Office</span></a> </div>
+					<div class="icondive">
+						<img src="images/icons/map.svg" alt="icon">
+					</div>
+					<div class="media-body getintouchinfo">
+						<a href="mailto:info@website.com">Jaipur, Rajasthan, India<span>Visit Our Office</span></a>
+					</div>
 				</div>
 			</div>
 			<div class="contact-data mt30">
@@ -480,23 +496,36 @@
 				<div class="col-lg-6 my-auto">
 					<h5 class="mt30 mb30">Dial a Call or Drop an Email</h5>
 					<div class="media mt15">
-						<div class="icondive"><img src="images/icons/call.svg" alt="icon"></div>
+						<div class="icondive">
+							<img src="images/icons/call.svg" alt="icon">
+						</div>
 						<div class="media-body getintouchinfo">
 							<a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span>
 							</a> 
 						</div>
 					</div>
 					<div class="media mt15">
-						<div class="icondive"><img src="images/icons/whatsapp.svg" alt="icon"></div>
-						<div class="media-body getintouchinfo"> <a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span></a> </div>
+						<div class="icondive">
+							<img src="images/icons/whatsapp.svg" alt="icon">
+						</div>
+						<div class="media-body getintouchinfo">
+							<a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span></a>
+						</div>
 					</div>
 					<div class="media mt15">
-						<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
-						<div class="media-body getintouchinfo"> <a href="mailto:info@website.com">info@website.com <span>Online Support</span></a> </div>
+						<div class="icondive">
+							<img src="images/icons/mail.svg" alt="icon"></div>
+						<div class="media-body getintouchinfo">
+							<a href="mailto:info@website.com">info@website.com <span>Online Support</span></a>
+						</div>
 					</div>
 					<div class="media mt15">
-						<div class="icondive"><img src="images/icons/skype.svg" alt="icon"></div>
-						<div class="media-body getintouchinfo"> <a href="skype:niwax.company?call">Niwax.Company<span>Visit Our Office</span></a> </div>
+						<div class="icondive">
+							<img src="images/icons/skype.svg" alt="icon">
+						</div>
+						<div class="media-body getintouchinfo">
+							<a href="skype:niwax.company?call">Niwax.Company<span>Visit Our Office</span></a>
+						</div>
 					</div>
 				</div>
 
@@ -630,7 +659,6 @@
 						</div>
 					</div>
 				</div>
-				
 			</div>
 		</div>
 	</section>
