mobile app page updated

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -496,6 +496,72 @@
 	</section>
     <!-- End Services -->
 
+	<!--Start Service-->
+	<section class="portfolio-section">
+		<div class="container">
+			<div class="row">
+                <div class="col-lg-12 p-0">
+                    <div class="portfolio-filter">
+                        <div class="pf-item set-bg fashion large-height" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 0px;">
+                            <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+                        <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/home/pf-2.jpg" style="background-image: url(&quot;images/home/pf-2.jpg&quot;); position: absolute; left: 19.9398%; top: 0px;">
+                            <a href="images/home/pf-2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+                        <div class="pf-item large-width set-bg natural" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
+                            <a href="images/home/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+                        <div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+						<div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+						<div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+						<div class="pf-item large-width set-bg natural" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
+                            <a href="images/home/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+			<div class="-cta-btn mt70">
+				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s">
+					<p>Hire a <span>Dedicated Developer</span></p> <a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a> </div>
+			</div>
+		</div>
+	</section>
+	<!--End Service-->
+
     <!-- Start Services -->
     <section class="services py-3 py-md-3 py-lg-5" id="services">
 		<div class="container">
@@ -2263,13 +2329,17 @@
     
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/plugin.min.js"></script>
-    <script src="js/dark-mode.js"></script>
-    <!--common script file-->
-    <script src="js/main.js"></script>
-    <script src="js/masonry.pkgd.min.js"></script>
-    <script src="js/owl.carousel.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="js/plugin.min.js"></script>
+	<script src="js/preloader.js"></script>
+	<script src="js/dark-mode.js"></script>
+	<script src="js/progress-bar.js"></script>
+	<script src='js/scroll-out.min.js'></script>
+	<script src='js/isotope.pkgd.min.js'></script>
+	<script src="js/masonry.pkgd.min.js"></script>
+	<script src="js/owl.carousel.js"></script>
 	<script src="js/owl.navigation.js"></script>
+	<!--common script file-->
+	<script src="js/main.js"></script>
 </body>
