mobile app page updated

--- a/website-development.html
+++ b/website-development.html
@@ -380,8 +380,8 @@
                 <div class="col-lg-6 v-center">
                     <div class="hero-heading-sec2 niwax" style="transform: translate3d(0px, 20px, 0px);">
                         <p class="wow fadeIn p1" style="visibility: visible; animation-name: fadeIn;">Development</p>
-                        <h3 class="wow fadeIn text-white" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Award-Winning Mobile App Development Company</h3>
-                        <p class="wow fadeIn p2" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">Make your business accessible to everyone with a stellar mobile application and enrich your consumer base to maximize your ROI.</p>
+                        <h3 class="wow fadeIn text-white" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Custom Web Development Company</h3>
+                        <p class="wow fadeIn p2" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">For over years of expertise, a Custom web application development company has been creating compelling and engaging web solutions for leading corporations in a variety of industries. Build a rich website, a fast progressive web app, or even an AR-powered e-commerce store using our unique and broad-ranging skills. We provide complete web development services with measurable outcomes and a transparent development approach.</p>
                         <div class="awrd-sec text-w mt40 wow fadeIn" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">
                             <div class="bages-slider owl-carousel mt20 owl-loaded owl-drag">
                                 <div class="item" style="width: 173.333px; margin-right: 20px;">
@@ -409,7 +409,7 @@
                         </div>
                     </div>
 		        </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 v-center">
+                <div class="col-sm-12 col-md-12 col-lg-6 v-center my-auto">
                     <div class="app-hero-bnr wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
                         <img src="images/banner/mobile-app-banner-img.png" alt="app development company" class="img-fluid">
                     </div>
@@ -440,13 +440,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
-                    <h2 class="common-heading">Tap into the world’s largest mobile market</h2>
-                    <p>with custom Mobile App Development</p>
+                    <h2 class="common-heading">Services we offer</h2>
+                    <p>Build a vibrant web presencet</p>
                 </div>
                 <div class="col-lg-3"></div>
                 <div class="col-lg-5 block-1">
                     <div class="common-heading text-l pl25">
-                        <p><strong>Android makes up 74% of all mobile apps.</strong> Creating a successful Android app can help to tap into a huge market, take advantage of more customization opportunities and less restrictive Google Play App Store policies to deliver unique value & great usability.</p>
+                        <p>Your web presence is pivotal for your brand, aside from it serving as a point of service. Get started with an experienced team that knows just what you need to take you forward.</p>
                     </div>
                 </div>
             </div>
@@ -455,53 +455,23 @@
     <!--End About -->
 
     <!-- Start Services -->
-    <section class="type py-5" id="type">
+    <section class="services py-3 py-md-3 py-lg-5" id="type">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
 					<div class="common-heading text-l">
-						<h2 class="common-heading">Custom Mobile App Development Company</h2>
-						<p class="text-center">Dive into the future with Future Reality – A custom mobile app development company with unmatched development services and technologies. Unlike conventional mobile applications developers around the globe, we have set ourselves apart with technology beyond imagination. We develop traditional mobile apps for startups and SMBs. For major enterprises, we have incredible technologies such as; Augmented Reality (AR), Virtual Reality (VR), and Mixed Reality (MR) to empower them.</p>
-						<p class="text-center">Future Reality is on the mission to evolve businesses and organizations, enabling them to streamline their operations and automate workflows. With alluring designs and impeccable coding, we help brands to push the limit and thrive among the best in the world. Leverage our mobile app development services to ignite your overall digital traction and connect with your target audience efficiently.</p>
+						<h2 class="common-heading">Web Development Services We Offer</h2>
 					</div>
 				</div>
             </div>
-			<div class="row mt-5">
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body custom-app-dev">
-                            <h5 class="pb-3">Enterprise App Development</h5>
-                            <p>Empowering major enterprises with feature-rich mobile applications to outmatch the competitors to become the favorites and most-wanted.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body custom-app-dev">
-                            <h5 class="pb-3">App Development For Startups</h5>
-                            <p>Stand tall against your competitors and giant names in the industry with an outstanding mobile app developed by us.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body custom-app-dev">
-                            <h5 class="pb-3">App Development For Kids</h5>
-                            <p>Educators and parents struggled with children’s education and interests since the pandemic. The struggle is no more with our mobile apps for kids.</p>
-                        </div>
-                    </div>
-                </div>
-			</div>
 		</div>
 	</section>
-    <!-- End Services -->
 
-	<!--Start Service-->
-	<section class="portfolio-section py-5">
+	<section class="portfolio-section">
 		<div class="container">
 			<div class="row">
                 <div class="col-lg-12 p-0">
-                    <div class="portfolio-filter mobile-app-service">
+                    <div class="portfolio-filter">
                         <div class="pf-item set-bg fashion large-height" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 0px;">
                             <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
@@ -523,7 +493,28 @@
                                 <span>Fashion</span>
                             </div>
                         </div>
-						<div class="pf-item large-width set-bg natural service-img-4" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px !important;">
+                        <div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+						<div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+						<div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                            <div class="pf-text">
+                                <h4>COLORS SPEAK</h4>
+                                <span>Fashion</span>
+                            </div>
+                        </div>
+						<div class="pf-item large-width set-bg natural" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
                             <a href="images/home/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>COLORS SPEAK</h4>
